[gd_scene load_steps=5 format=3 uid="uid://byx2b31xqnph7"]

[ext_resource type="Script" path="res://scripts/entities/backend/battle_manager/battle_gui_manager.gd" id="1_670wc"]
[ext_resource type="Texture2D" uid="uid://crwt7j8frlagq" path="res://sprites/entities/gui/pointer/pointer.png" id="2_rmcka"]
[ext_resource type="Theme" uid="uid://deelp3asqekct" path="res://themes/global/gui/stdgui.tres" id="2_ueohp"]
[ext_resource type="Script" path="res://scripts/entities/backend/battle_manager/battle_gui_fight.gd" id="3_33sli"]

[node name="gui_manager" type="CanvasLayer"]
script = ExtResource("1_670wc")

[node name="action_select" type="Panel" parent="."]
offset_left = 9.0
offset_top = 9.0
offset_right = 116.0
offset_bottom = 44.0
theme = ExtResource("2_ueohp")

[node name="action_select_grid" type="GridContainer" parent="action_select"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -15.5
offset_right = 59.5
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="fight" type="RichTextLabel" parent="action_select/action_select_grid"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Fight"
script = ExtResource("3_33sli")

[node name="stash" type="RichTextLabel" parent="action_select/action_select_grid"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Stash"

[node name="run" type="RichTextLabel" parent="action_select/action_select_grid"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Run"

[node name="magic" type="RichTextLabel" parent="action_select/action_select_grid"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Magic"

[node name="pass" type="RichTextLabel" parent="action_select/action_select_grid"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Pass"

[node name="blank" type="RichTextLabel" parent="action_select/action_select_grid"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Blank"

[node name="enemy_select" type="Panel" parent="."]
offset_left = 53.0
offset_top = 24.0
offset_right = 160.0
offset_bottom = 59.0
theme = ExtResource("2_ueohp")

[node name="enemy_select_grid" type="GridContainer" parent="enemy_select"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -15.5
offset_right = 59.5
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="pointer" type="TextureRect" parent="."]
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("2_rmcka")
